--- a/proyecto2/views/index.ejs
+++ b/proyecto2/views/index.ejs
@@ -1,4 +1,5 @@
 <!-- views/index.ejs -->
+
 <!doctype html>
 <html>
 <head>
@@ -17,11 +18,11 @@
 
         <p>Login or Register with:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+
     </div>
 
 </div>
 </body>
-</html>
+</html>   
 
