--- a/proyecto2/views/profile.ejs
+++ b/proyecto2/views/profile.ejs
@@ -25,6 +25,7 @@
                 <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
 
                     <p>
+                        <strong>type user</strong>: <%= user.local.type_user %><br>
                         <strong>id</strong>: <%= user.google.id %><br>
                         <strong>token</strong>: <%= user.google.token %><br>
                         <strong>email</strong>: <%= user.google.email %><br>
