mise en place gestion styles

--- a/proyecto2/views/css/layout_clair.css
+++ b/proyecto2/views/css/layout_clair.css
@@ -21,6 +21,13 @@
 
 }
 
+.alignement_connexion_deconnexion {
+    margin-top: 30px;
+    margin-right: 100px;
+    float:right;
+
+}
+
 .couleur_bootstrap { 
     color: #337ab7;
 }
