--- a/proyecto2/views/index.twig
+++ b/proyecto2/views/index.twig
@@ -1,18 +1,8 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-    
-    <div class="container">
-
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
-
-        <p>Login or Register with:</p>
-
-        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
-
+    <div>
+        Page d'accueil de l'application
     </div>
 
-</div>
-    
 {% endblock %}
