--- a/proyecto2/views/estilo.twig
+++ b/proyecto2/views/estilo.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <div id="page_principale" class="col-md-8 panel-body">
-        <button type="button" class="btn btn-info" onclick="changeStyle('css/layout_clair.css', 'css/layout_dark.css')">Estilo claro</button>
-        <button type="button" class="btn btn-primary" onclick="changeStyle('css/layout_dark.css', 'css/layout_clair.css')">Estilo oscuro</button>
+        <button type="button" class="btn btn-info" onclick="changeStyle('layout_clair.css')">Estilo claro</button>
+        <button type="button" class="btn btn-primary" onclick="changeStyle('layout_dark.css')">Estilo oscuro</button>
 
     </div>
 {% endblock %}
