--- a/proyecto2/views/profile.twig
+++ b/proyecto2/views/profile.twig
@@ -15,7 +15,9 @@
                 <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
 
                 <p>
+                    <strong>id BDD</strong>: {{ user._id }}<br>
                     <strong>type user</strong>: {{ user.local.type_user }}<br>
+                    <strong>type layout</strong>: {{ user.local.layout }}<br>
                     <strong>id</strong>: {{ user.google.id }}<br>
                     <strong>token</strong>: {{ user.google.token }}<br>
                     <strong>email</strong>: {{ user.google.email }}<br>
