--- a/proyecto2/views/consultacriteriosalumno.twig
+++ b/proyecto2/views/consultacriteriosalumno.twig
@@ -2,6 +2,61 @@
 
 {% block body %}
     <div id="page_principale" class="col-md-8 panel-body">
-        
+
+        <table id="evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable">
+
+            <tbody>
+                <tr>
+                    <td colspan="3"><h1>{{ objEvaluation[0].nom }} del grupo {{ objGroupe[0].nomGroupe }}</h1></td>
+                </tr>
+
+                <tr>
+                    <td rowspan="4">Descripcion : {{ objEvaluation[0].description }}</td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">Fecha de entrega : {{ objEvaluation[0].date }}</td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">{{ objEvaluation[0].type }}</td>
+                </tr>
+
+                <tr>
+                    <td>Nota : {{ objGroupeEvalue[0].noteGlobale }}</td>
+                    <td>Commentario : {{ objGroupeEvalue[0].commentaire }}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table id="liste_criteres_evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable">
+
+
+            <thead>
+                <tr>
+                    <th colspan="3">Criterios de evaluacion</th>
+                </tr>
+            </thead>
+
+            <tbody>
+
+                {% set i = 0 %}
+                {% for critere in listeCriteres %}
+                    <tr>
+                        <td>{{ critere.nomCritere }}</td>
+                        <td>{{ listeNotesCriteresGeneral[i][0].noteCritere }}</td>
+                        <td>{{ listeNotesCriteresGeneral[i][0].commentaire }}</td>
+                    </tr>
+                    {% set i = i + 1 %}
+                {% endfor %}
+
+            </tbody>
+        </table>
+
+        <a href="/alumno" class="btn btn-danger">Volver a la lista de evaluaciones</a>
+
+
+
+
     </div>
 {% endblock %}
