--- a/proyecto2/views/modificarevaluacion.twig
+++ b/proyecto2/views/modificarevaluacion.twig
@@ -1,31 +1,38 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-    <div id="page_principale" class="col-md-8 panel-body">
+    <div id="page_principale" class="col-md-12 panel-body">
 
-        <table id="evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable">
+        <table id="evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable col-md-12">
 
             <tbody>
                 <tr>
-                    <td colspan="3"><h1>{{ objEvaluation[0].nom }} del grupo {{ objGroupe[0].nomGroupe }}</h1></td>
+                    <td colspan="3" style="text-align:center;"><h1>{{ objEvaluation[0].nom }} del grupo {{ objGroupe[0].nomGroupe }}</h1></td>
                 </tr>
 
                 <tr>
-                    <td rowspan="4">Descripcion : {{ objEvaluation[0].description }}</td>
+                    <td>Descripcion : {{ objEvaluation[0].description }}</td>
+                    <td>Fecha de entrega : {{ objEvaluation[0].date }}</td>
+                    <td>Tipo de evaluacion : {{ objEvaluation[0].type }}</td>
                 </tr>
 
                 <tr>
-                    <td colspan="2">Fecha de entrega : {{ objEvaluation[0].date }}</td>
+                    <td>Nota : 
+                        <input type="number" id="noteGlobaleEvaluation" name="noteGlobaleEvaluation" min="0" max="5" value="{{ objGroupeEvalue[0].noteGlobale }}">
+
+                    </td>
+                    <td colspan="2">Commentario : 
+                        <textarea id="commentaireGlobalEvaluation" name="commentaireGlobalEvaluation" >{{ objGroupeEvalue[0].commentaire }}</textarea>
+                    </td>
                 </tr>
 
                 <tr>
-                    <td colspan="2">{{ objEvaluation[0].type }}</td>
+                    <td colspan="3" style="text-align:center;">
+                        <span class="btn btn-success" onclick="validerNoteGlobaleEvaluation('{{ idGroupe }}', '{{ idEvaluation }}')" >Validar nota global</span>
+                    </td>
                 </tr>
 
-                <tr>
-                    <td>Nota : {{ objGroupeEvalue[0].noteGlobale }}</td>
-                    <td>Commentario : {{ objGroupeEvalue[0].commentaire }}</td>
-                </tr>
+
             </tbody>
         </table>
 
@@ -34,8 +41,16 @@
 
             <thead>
                 <tr>
-                    <th colspan="3">Criterios de evaluacion</th>
+                    <th colspan="3" style="text-align:center"><h2>Criterios de evaluacion</h2></th>
                 </tr>
+
+                <tr>
+                    <th>Criterio</th>
+                    <th>Nota</th>
+                    <th>Commentario</th>
+                </tr>
+
+
             </thead>
 
             <tbody>
