--- a/proyecto2/views/modificarevaluacion.twig
+++ b/proyecto2/views/modificarevaluacion.twig
@@ -36,38 +36,58 @@
             </tbody>
         </table>
 
-        <table id="liste_criteres_evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable">
+
+        <form id="formulaireCriteresEvaluation" method="post">
+
+            <table id="liste_criteres_evaluation_{{ objEvaluation[0]._id }}"  class="table table-striped table-bordered table-hover dataTable">
 
 
-            <thead>
-                <tr>
-                    <th colspan="3" style="text-align:center"><h2>Criterios de evaluacion</h2></th>
-                </tr>
-
-                <tr>
-                    <th>Criterio</th>
-                    <th>Nota</th>
-                    <th>Commentario</th>
-                </tr>
-
-
-            </thead>
-
-            <tbody>
-
-                {% set i = 0 %}
-                {% for critere in listeCriteres %}
+                <thead>
                     <tr>
-                        <td>{{ critere.nomCritere }}</td>
-                        <td>{{ listeNotesCriteresGeneral[i][0].noteCritere }}</td>
-                        <td>{{ listeNotesCriteresGeneral[i][0].commentaire }}</td>
+                        <th colspan="3" style="text-align:center"><h2>Criterios de evaluacion</h2></th>
                     </tr>
-                    {% set i = i + 1 %}
-                {% endfor %}
 
-            </tbody>
-        </table>
+                    <tr>
+                        <th>Criterio</th>
+                        <th>Nota</th>
+                        <th>Commentario</th>
+                    </tr>
 
+
+                </thead>
+
+                <tbody>
+
+                    {% set i = 0 %}
+                    {% for critere in listeCriteres %}
+                        <tr>
+                            <td>{{ critere.nomCritere }}
+
+                                <input id="idCritere_{{i}}" name="idCritere_{{i}}" type="hidden" value="{{ critere._id }}">
+                            </td>
+                            <td>
+                                <input type="number" id="noteCritere_{{i}}" name="noteCritere_{{i}}" min="0" max="5" value="{{ listeNotesCriteresGeneral[i][0].noteCritere }}">
+                            </td>
+                            <td>
+                                <textarea id="commentaireCritere_{{i}}" name="commentaireCritere_{{i}}" >{{ listeNotesCriteresGeneral[i][0].commentaire }}</textarea>
+                            </td>
+                        </tr>
+                        {% set i = i + 1 %}
+                    {% endfor %}
+
+                    <tr>
+                        <td colspan="3" style="text-align:center;">
+                            <input id="nbCriteres" name="nbCriteres" type="hidden" value="{{ nbCriteres }}">
+                            <input id="idGroupe" name="idGroupe" type="hidden" value="{{ idGroupe }}">
+                            <input id="idEvaluation" name="idEvaluation" type="hidden" value="{{ idEvaluation }}">
+                            <span class="btn btn-success" onclick="validerCriteresEvaluation()" >Validar criterios</span>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+        </form>
         <a href="/eval" class="btn btn-danger">Volver a la lista de las comisiones asignadas</a>
 
 
